Load project in headless mode